chore: adds handles for project member role updation and member deletion
